fixed FOIT invisible text issue

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,9 +1,11 @@
 /*#region Font declaration*/
+/*added font-display: swap; to fix invisible text issue*/
 @font-face {
     font-family: 'Roboto-Bold';
     src: url('/fonts/Roboto/Roboto-Bold.ttf');
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -11,6 +13,7 @@
     src: url('/fonts/Roboto/Roboto-Light.ttf');
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -18,6 +21,7 @@
     src: url('/fonts/Roboto/Roboto-Regular.ttf');
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -25,6 +29,7 @@
     src: url('/fonts/Roboto/Roboto-Medium.ttf');
     font-style: normal;
     font-weight: normal;
+    font-display: swap;
 }
 /*#endregion*/
 
